--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
   <title> The Grand Daha Luxury Villas - Love Bali Villas Blogs</title>
-  <meta content="" name="The Grand Daha Luxury Villas: Where Luxury and Modernity Converge in Seminyak Recommended by Love Bali Villas @lovebalivillas Expedia Partner">
+  <meta content="" name="Love Bali Villas, @lovebalivillas, Love Bali Villas Blogs, Romantic honeymoon villa Canggu, Love Bali Villas recommendation, Expedia partner villa Canggu, Private pool honeymoon retreat, Romantic villa accommodation, Intimate Bali getaway, Luxury honeymoon rental, Canggu romantic escapade, Exquisite honeymoon haven, The Grand Daha Luxury Villas,">
   <meta content="" name="Immerse yourself in the epitome of luxury at The Grand Daha Luxury Villas, a contemporary villa complex in Seminyak, Bali, recommended by Love Bali Villas. Experience opulence, modernity, and personalized service. ">
 
   <!-- Favicons -->
@@ -187,7 +187,7 @@
           <div class="eg-widget" data-widget="search" data-program="us-expedia" data-lobs="stays,flights" data-network="pz" data-camref="1100lC75G"></div>
 <script class="eg-widgets-script" src="https://affiliates.expediagroup.com/products/widgets/assets/eg-widgets.js"></script>
           <p>
-            Immerse yourself in the epitome of <a href="https://expedia.com/affiliates/lovebalivillas/grand-daha-luxury-villas" target="_blank">luxury at The Grand Daha Luxury Villas</a>, a contemporary villa complex in Seminyak, Bali, recommended by Love Bali Villas. Experience opulence, modernity, and personalized service. Book confidently through our partnership with Expedia, ensuring an unforgettable and stylish retreat. #TheGrandDahaLuxuryVillas #LuxuryGetaway #LoveBaliVillasRecommendation
+            <a href="https://www.anyadya.club/" target="_blank"> (Anya Dya - Aug 23) </a>  Immerse yourself in the epitome of <a href="https://expedia.com/affiliates/lovebalivillas/grand-daha-luxury-villas" target="_blank">luxury at The Grand Daha Luxury Villas</a>, a contemporary villa complex in Seminyak, Bali, recommended by Love Bali Villas. Experience opulence, modernity, and personalized service. Book confidently through our partnership with Expedia, ensuring an unforgettable and stylish retreat. #TheGrandDahaLuxuryVillas #LuxuryGetaway #LoveBaliVillasRecommendation
 
           </p>
 <p> 
